html for artists methods

--- a/resources/music_library_database_app/views/albums.erb
+++ b/resources/music_library_database_app/views/albums.erb
@@ -3,10 +3,9 @@
   <body>
     <h1>Albums</h1>
     <% @albums.each do |album|%>
-      <p>
-        Title: <%= album.title%>
-        Release year: <%= album.release_year%>
-      </p>
+
+      <a href="/albums/<%= album.id %>"><%= album.title%></a><br>
+
     <% end %>
   </body>
 </html>
