--- a/projects_to_debug/postcode_checker_app/views/check.erb
+++ b/projects_to_debug/postcode_checker_app/views/check.erb
@@ -10,7 +10,7 @@
   <a href="/">Back to the homepage</a>
 
   <div>
-    <% if @valid %>
+    <% if @more_valid %>
       This is a valid postcode
     <% else %>
       This is not a valid postcode
